test_programs/compile_failure/global_without_a_type_used_as_array_length/src/main.nr
global BAR = OOPS;
global X: [Field; BAR] = [];
